[package]
name = "koto-ls"
version = "0.15.0"
edition = "2021"

authors = ["irh <ian.r.hobson@gmail.com>"]
description = "An LSP server for the Koto programming language"
homepage = "https://koto.dev"
keywords = ["scripting", "language", "koto", "lsp"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/koto-lang/koto-ls"

[dependencies]
anyhow = "1.0.82"
is_sorted = "0.1.1"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tower-lsp = "0.20.0"
tracing-subscriber = "0.3.18"

[dependencies.koto]
version = "0.15.3"
default-features = false
features = ["arc"]

# [patch.crates-io]
# koto = { git = "https://github.com/koto-lang/koto" }
