[package]
name = "koto-ls"
version = "0.16.1"
edition = "2024"

authors = ["irh <ian.r.hobson@gmail.com>"]
description = "An LSP server for the Koto programming language"
homepage = "https://koto.dev"
keywords = ["scripting", "language", "koto", "lsp"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/koto-lang/koto-ls"

[features]
log = ["tracing-subscriber"]

[dependencies]
anyhow = "1.0.82"
is_sorted = "0.1.1"
thiserror = "2"
tokio = { version = "1.37.0", features = ["full"] }
tower-lsp-server = "0.22"
tracing-subscriber = { version = "0.3.18", optional = true }

[dependencies.koto_bytecode]
version = "0.16.0"
default-features = false
features = ["arc"]

[dependencies.koto_format]
version = "0.16.0"
default-features = false
features = ["arc"]

[dependencies.koto_parser]
version = "0.16.0"
default-features = false
features = ["arc", "error_ast"]

# [patch.crates-io]
# koto_bytecode = { git = "https://github.com/koto-lang/koto" }
# koto_format = { git = "https://github.com/koto-lang/koto" }
# koto_parser = { git = "https://github.com/koto-lang/koto" }

[profile.release]
codegen-units = 1
lto = true
